tests/smt2/error/bad_core2.smt2
(assert true)
(check-sat)
(get-unsat-core)